# tokimo-app-photo

./: Cargo.toml  README.md  tokimo-app.toml
.github/workflows/: ci.yml
migrations/: 20260601000001__init.up.sql  20260601000002__app_settings.up.sql  20260625010000__album_sources_and_shares.up.sql
src/: app_server.rs  assets.rs  config.rs  ctx.rs  error.rs  lib.rs  main.rs  models.rs  router.rs  state.rs
src/bus_clients/: app_events.rs  auth.rs  jobs.rs  media_intelligence.rs  mod.rs  person.rs  share.rs  vfs.rs
src/bus_services/: mod.rs  photo_jobs.rs
src/common/: mod.rs  thread_util.rs
src/db/: mod.rs  pagination.rs
src/db/entities/: app_settings.rs  book_chapters.rs  book_files.rs  book_items.rs  book_volumes.rs  books.rs  jobs.rs  mod.rs  music_album_artists.rs  music_albums.rs  musics.rs  photo_album_user_shares.rs  photo_albums.rs  photo_clip_vectors.rs  photo_faces.rs  photo_geo_cache.rs  photo_libraries.rs  photo_ocr_results.rs  photo_persons.rs  photos.rs  system_config.rs  vfs.rs
src/db/models/: job.rs  mod.rs
src/db/models/media/: vfs.rs
src/db/repos/: app_settings_repo.rs  book_repo.rs  job_repo.rs  library_repo.rs  mod.rs  photo_repo.rs  system_config_repo.rs
src/db/repos/media/: mod.rs  music_repo.rs  vfs_repo.rs
src/handlers/: ai.rs  album.rs  batch.rs  browse.rs  crud.rs  geo.rs  mod.rs  person.rs  stream.rs  sync.rs  user.rs
src/handlers/media/: stream.rs  utils.rs
src/handlers/vfs/: connections.rs  mod.rs
src/handlers/vfs/ops/: archive.rs  browse.rs  dir_meta.rs  mod.rs  probe.rs  stream.rs  transfer.rs  types.rs  walk.rs  write.rs
src/models/: mod.rs
src/queue/: cancellation.rs  mod.rs  parent_child.rs  person_sync.rs  photo_clip.rs  photo_clip_scan.rs  photo_clip_single.rs  photo_face.rs  photo_face_scan.rs  photo_face_single.rs  photo_geocode.rs  photo_geocode_scan.rs  photo_library_sync.rs  photo_ocr.rs  photo_ocr_scan.rs  photo_ocr_single.rs  photo_scrape.rs
src/queue/handlers/: file_scrape.rs  photo_clip.rs  photo_face_detect.rs  photo_ocr.rs  photo_reverse_geocode.rs
src/repos/: library_repo.rs  photo_repo.rs
src/services/: ai.rs  app_sync.rs  clip.rs  face.rs  geo.rs  media_jobs.rs  mod.rs  notifications.rs  ocr.rs  preempt.rs  source.rs  storage.rs  vfs_types.rs  walk.rs
src/services/ai/: cancel.rs  mod.rs
src/services/scrape/: mod.rs  photo.rs
src/services/scrape/shared/: artwork.rs  constants.rs  lib_type.rs  mod.rs  parse.rs
src/services/source/: mod.rs  path.rs  storage_driver.rs
src/services/storage/: local_provider.rs  mod.rs  opendal_provider.rs  s3_provider.rs  thumb_storage_impl.rs  types.rs
ui/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/public/wasm/: tokimo_app_photo_wasm.d.ts  tokimo_app_photo_wasm.js  tokimo_app_photo_wasm_bg.wasm
ui/scripts/: prepare-wasm.ts
ui/src/: AppContext.tsx  PhotoContent.tsx  index.css  index.tsx  modal-bridge.ts  photo-extension-types.ts  photo-extension.tsx  vendor.d.ts  viewer-state.ts  wasm-init.ts
ui/src/api/: client.ts  vfs-hooks.ts
ui/src/components/: AlbumPickerDialog.tsx  CreateAlbumWindow.tsx  DateHeader.tsx  ExifModal.tsx  ExifWindow.tsx  OcrBboxEditOverlay.tsx  OcrBlockSelectLayer.tsx  OcrDebugModal.tsx  OcrDebugWindow.tsx  OcrResultRow.tsx  PhotoAiInfoExtras.tsx  PhotoAiOverlay.tsx  PhotoAiSettingsWindow.tsx  PhotoAiStore.ts  PhotoAiToolbarButtons.tsx  PhotoAlbumsView.tsx  PhotoApp.tsx  PhotoExtensionProviders.tsx  PhotoFacesPanel.tsx  PhotoFoldersView.tsx  PhotoGeoSettingsWindow.tsx  PhotoInfoPanel.tsx  PhotoInfoSidebar.tsx  PhotoLibraryEditor.tsx  PhotoLibraryEditorWindow.tsx  PhotoLightbox.tsx  PhotoLocationTab.tsx  PhotoLocationsView.tsx  PhotoMapView.tsx  PhotoMenuBar.tsx  PhotoMiniMap.tsx  PhotoPeopleView.tsx  PhotoReprocessTools.tsx  PhotoSelectionBar.tsx  PhotoSettingsWindow.tsx  PhotoSidebar.tsx  PhotoSizeSlider.tsx  PhotoThumbnail.tsx  PhotoTimeline.tsx  PhotoToolsPanel.tsx  (+18 more)
ui/src/components/avatar-picker/: AvatarPicker.tsx  EmojiGrid.tsx  IconGrid.tsx  index.ts
ui/src/hooks/: useJustifiedLayout.ts  useLibraryItemProgress.ts  usePersonEntityEvents.ts  useVfsBrowse.ts
ui/src/i18n/: en-US.ts  index.ts  ja-JP.ts  zh-CN.ts
ui/src/lib/: auth-fetch.ts  icon-catalog.ts  ocr-models.ts  rust-api-runtime.ts  server-base.ts  storage-url.ts  thumb.ts  types.ts
ui/src/pages/: PhotoAppPage.tsx  PhotoLibraryPage.tsx  PhotoSearchDisplay.tsx  use-photo-data.ts  use-photo-mutations.ts
ui/src/shared/: avatar-utils.ts  browse-bridge.ts  providers.tsx
ui/src/shared/components/: icons.tsx
ui/src/shared/components/icons/: AppIcon.tsx  MaterialFileIcon.tsx  WindowIcon.tsx  icon-utils.ts  index.ts
ui/src/shared/hooks/: use-container-width.ts  use-sidebar-collapsed.ts  use-sync-progress.ts
ui/src/shared/utils/: heic-decoder.ts  heic-worker.ts  raw-decoder.ts
ui/src/shell/: hooks.ts
ui/src/system/: index.ts
ui/src/system/window/: window-sync.ts  window-types.ts
ui/src/types/: avatar.ts  index.ts  vfs.ts
