[package]
name        = "tokimo-app-photo"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Tokimo Photo — 库 / 浏览 / AI (OCR / CLIP / 人脸) / 地理 / 相册"
repository  = "https://github.com/tokimo-lab/tokimo-app-photo"

[lib]
name = "tokimo_app_photo"
path = "src/lib.rs"

[[bin]]
name = "tokimo-app-photo"
path = "src/main.rs"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }

clap              = { version = "4", features = ["derive", "env"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sea-orm            = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "macros"] }
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
anyhow             = "1"
axum = { version = "0.8", features = ["json", "multipart"] }
ts-rs = { version = "12", features = ["serde-json-impl"] }

# ── Workspace-local packages ──
tokimo-perception        = { path = "../../packages/tokimo-perception" }
tokimo-package-image     = { path = "../../packages/tokimo-package-image" }
tokimo-package-ffmpeg    = { path = "../../packages/tokimo-package-ffmpeg" }
tokimo-package-utils     = { path = "../../packages/tokimo-package-utils" }
tokimo-package-client-api = { path = "../../packages/tokimo-package-client-api" }
tokimo-vfs-core          = { path = "../../packages/tokimo-package-vfs/packages/core" }
tokimo-vfs               = { path = "../../packages/tokimo-package-vfs/packages/fs" }
tokimo-package-hls       = { path = "../../packages/tokimo-package-hls" }

# ── External crates ──
reqwest      = { workspace = true, features = ["stream"] }
futures-util = { workspace = true }
async-trait  = { workspace = true }
dashmap      = { workspace = true }
bytes        = { workspace = true }
regex        = { workspace = true }
tokio-stream = { workspace = true }
tokio-util   = { workspace = true }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["cors", "fs"] }
lofty        = "0.22"
opendal      = { version = "0.52", features = ["services-fs"] }
