[package]
name        = "tokimo-app-photo"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Tokimo Photo — 库 / 浏览 / AI (OCR / CLIP / 人脸) / 地理 / 相册"
repository  = "https://github.com/tokimo-lab/tokimo-app-photo"

[lib]
name = "tokimo_app_photo"
path = "src/lib.rs"

[[bin]]
name = "tokimo-app-photo"
path = "src/main.rs"

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "11b3237bd09d6eeb95ae5f951e0660e0c23c87d1" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "11b3237bd09d6eeb95ae5f951e0660e0c23c87d1", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "11b3237bd09d6eeb95ae5f951e0660e0c23c87d1", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "11b3237bd09d6eeb95ae5f951e0660e0c23c87d1" }

clap              = { version = "4", features = ["derive", "env"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sea-orm            = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "macros"] }
rust-embed         = { version = "8", features = ["debug-embed"] }
mime_guess         = "2"
anyhow             = "1"
axum = { version = "0.8", features = ["json", "multipart"] }
ts-rs = { version = "12", features = ["serde-json-impl"] }

# ── Workspace-local packages ──
tokimo-media-intelligence = { git = "https://github.com/tokimo-lab/tokimo-media-intelligence.git", rev = "cb22558" }
tokimo-package-image      = { git = "https://github.com/tokimo-lab/tokimo-package-image.git", rev = "1fbce46" }
tokimo-package-ffmpeg     = { git = "https://github.com/tokimo-lab/tokimo-package-ffmpeg.git", rev = "b3bb5c8c" }
tokimo-package-utils      = { git = "https://github.com/tokimo-lab/tokimo-package-utils.git", rev = "b1edb7b9" }
tokimo-package-client-api = { git = "https://github.com/tokimo-lab/tokimo-package-client-api.git", rev = "07283bb0" }
tokimo-vfs-core           = { git = "https://github.com/tokimo-lab/tokimo-package-vfs.git", rev = "c13c5d3" }
tokimo-vfs                = { git = "https://github.com/tokimo-lab/tokimo-package-vfs.git", rev = "c13c5d3" }
tokimo-package-hls        = { git = "https://github.com/tokimo-lab/tokimo-package-hls.git", rev = "e5792253" }

# ── External crates ──
reqwest      = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
futures-util = "0.3"
async-trait  = "0.1"
dashmap      = "6"
bytes        = "1"
regex        = "1"
tokio-stream = "0.1"
tokio-util   = "0.7"
tower        = "0.5"
tower-http   = { version = "0.6", features = ["cors", "fs"] }
lofty        = "0.22"
opendal      = { version = "0.52", features = ["services-fs"] }
